# bad_tools

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
bad_tools/: sim.py
docs/: conf.py  index.md
examples/: detector_banks.org  estimate_pattern.org  hello_world.py  location_ui.py  location_ui2.py  scratch.org
src/bad_tools/: __init__.py  search.py  sim.py
tests/: test_package.py
